--- a/main.html
+++ b/main.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="grid.css">
 </head>
-
 <body>
     <div class="holder">
-    	<div class="item item-1">1</div>
-    	<div class="item item-2">2</div>
-    	<div class="item item-3">3</div>
-    	<div class="item item-4">4</div>
-   </div>
-   <script type="text/javascript" src="./script.js">
-</script>
-
+        <div> 1</div>
+        <div> 2</div>
+        <div> 3</div>
+        <div> 4</div>
+    </div>
 </body>
-
 </html>
