--- a/main.html
+++ b/main.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="grid.css">
-</head>
-<body>
-    <div class="holder">
-        <div> 1</div>
-        <div> 2</div>
-        <div> 3</div>
-        <div> 4</div>
-    </div>
-</body>
+  <head>
+    <link rel="stylesheet" href="gstyle.css">
+  </head>
+<div class="holder">
+  <div class="item">1</div>
+  <div class="item">2</div>
+  <div class="item">3</div>
+  <div class="item">4</div>
+</div>
 </html>
