--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="gstyle.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 <div class="holder">
   <div class="item">1</div>
